feat: function transcript view by allowed stakeholder
